--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@layer base {
+
+
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer components {
+
+  .center {
+    @apply flex justify-center items-center gap-2;
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  .app-btn {
+    @apply text bg-transparent text-app-dark center p-2 outline-none rounded-md
+    border border-app-dark hover:opacity-100 opacity-50;
+  }
+
+  .text {
+    @apply text-sm font-normal;
+  }
+  .text-1 {
+    @apply text-base font-normal;
+  }
+  .text-2 {
+    @apply text-lg font-bold;
+  }
+  .text-3 {
+    @apply text-xl font-black;
+  }
+
 }
