--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
   }
 
   body {
-    @apply w-screen min-h-screen bg-app-light overflow-x-hidden
+    @apply w-screen h-screen bg-app-light overflow-x-hidden
   }
 }
 
@@ -43,7 +43,8 @@
   .app-header {
     @apply bg-app--light fixed left-1/2 -translate-x-1/2
     flex justify-between items-center app-max-w z-50 p-4
-    duration-300 shadow-sm md:my-2 md:rounded-full md:px-6;
+    duration-300 shadow-sm md:my-2 md:rounded-full md:px-6
+    animate-leftright;
   }
 
   .app-max-w {
@@ -174,77 +175,61 @@
 
   /* Custom Animtions */
   .animate-leftright {
-    animation: k-leftright 0.5s;
+    animation: k-leftright 1s;
   }
 
   @keyframes k-leftright {
     0% {
       transform: translate(-100%);
-    }
-
-    100% {
-      transform: translate(0%);
+      opacity: 0;
     }
   }
 
   .animate-rightleft {
-    animation: k-rightleft 0.5s;
+    animation: k-rightleft 1s;
   }
 
   @keyframes k-rightleft {
     0% {
       transform: translate(100%);
-    }
-
-    100% {
-      transform: translate(0%);
+      opacity: 0;
     }
   }
 
   .animate-topdown {
-    animation: k-topdown 0.5s;
+    animation: k-topdown 1s;
   }
 
   @keyframes k-topdown {
     0% {
       transform: translateY(-100%);
-    }
-
-    100% {
-      transform: translateY(0%);
+      opacity: 0;
     }
   }
 
   .animate-downtop {
-    animation: k-downtop 0.5s;
+    animation: k-downtop 1s;
   }
 
   @keyframes k-downtop {
     0% {
       transform: translateY(100%);
-    }
-
-    100% {
-      transform: translateY(0%);
+      opacity: 0;
     }
   }
 
   .rotate-animation {
-    animation: rotate 2s linear infinite; /* Adjust the duration (5s) as needed */
+    animation: kfs-rotate 2s linear infinite;
   }
 
-  @keyframes rotate {
-    from {
-      transform: rotateY(0deg);
-    }
-    25% {
-      transform: rotateY(45deg);
-    }
-    50% {
-      transform: rotateY(-45deg);
-    }
+  .animate-rotate-long {
+    animation: kfs-rotate 60s linear infinite;
+  }
+
+
+  @keyframes kfs-rotate {
     100% {
-      transform: rotateY(0deg);
+      transform: rotate(360deg);
     }
   }
 
