--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -19,13 +19,13 @@
     --t-success: theme(colors.green.600);
   }
 
-  @media (prefers-color-scheme: dark) {
+  @media (prefers-color-scheme: -dark) {
     :root {
       --foreground: theme(colors.neutral.200);
       --background: theme(colors.neutral.900);
       --t-background: theme(colors.neutral.800);
-      --primary: theme(colors.green.800);
-      --t-primary: theme(colors.green.300);
+      --primary: theme(colors.lime.800);
+      --t-primary: theme(colors.lime.300);
       --danger: theme(colors.red.800);
       --t-danger: theme(colors.red.400);
       --alert: theme(colors.yellow.800);
@@ -36,8 +36,8 @@
   }
 
   html {
-    --duration: 0.5s;
-    --duration-long: 1.5s;
+    --duration: 0.6s;
+    --duration-long: 1.6s;
   }
 
   * {
@@ -158,7 +158,7 @@
   .select {
     @apply
     bg-background full rd shadow outline-none
-    focus:ring-t-primary ring-transparent ring-1 p-4
+    focus:ring-foreground ring-transparent ring-1 p-4
   }
 
   /* Links */
